# advent-of-code-2021

./: .gitignore  README.md  pyproject.toml
src/: day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day2.py  day20.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  dayXX.py
src/aoc/: __init__.py
